--- a/index.html
+++ b/index.html
@@ -5,12 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
+    <style>
+      body {
+        background-color: #E7FBFB;
+      }
+      
+      header {
+        font-size: 4em;
+        text-align: center;
+        color: #010B5B;
+      }
+      </style>
     <title>Vicious Cycles</title>
 </head>
 
 <body>
     <header>
+      <h1>Vicious Cycles</h1>
         <nav>
           <img src="logo" alt="Vicious cycles Logo" height="" width="">
           <ul>
